--- a/index.html
+++ b/index.html
@@ -8,5 +8,28 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBHgqqOgYF4inrAP7s0lzKzu7He2XppsaQ",
+    authDomain: "cricket-score-counter1.firebaseapp.com",
+    projectId: "cricket-score-counter1",
+    storageBucket: "cricket-score-counter1.firebasestorage.app",
+    messagingSenderId: "216196782567",
+    appId: "1:216196782567:web:5a172a81ecd1771486c542",
+    measurementId: "G-0S6NGW15F2"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
   </body>
 </html>
