--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
-    apiKey: "AIzaSyBHgqqOgYF4inrAP7s0lzKzu7He2XppsaQ",
+    apiKey: "",
     authDomain: "cricket-score-counter1.firebaseapp.com",
     projectId: "cricket-score-counter1",
     storageBucket: "cricket-score-counter1.firebasestorage.app",
